add resize, key events, fix offset

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,4 +1,5 @@
-$main-bg: #d1aef8;
+$main-bg: #dec3fd;
+$main-bg-second: #d1aef8;
 $leg-width: 34px;
 $leg-width-desktop: 38px;
 $gong-color: #ffefb8;
