fix animation switching

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -9,7 +9,7 @@ $leg-shadow: #a0725b;
 $leg-color: #b48868;
 $shadow-width: 4px;
 $shadow-width-desktop: 8px;
-// $tablet: 768px;
+$animation-iterations: 4;
 $tablet: 540px;
 $desktop: 1150px;
 $min-width-tablet: "(min-width: #{$tablet})";
