fix mobile version

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,7 @@
 $main-bg: #dec3fd;
 $main-bg-second: #d1aef8;
-$leg-width: 34px;
+$leg-width: 26px;
+$leg-width-tablet: 34px;
 $leg-width-desktop: 38px;
 $gong-color: #ffefb8;
 $rope-color: #1d1d1a;
